format code and pass null some field csv